Bug 882482 - Do not use the store buffer off the main thread; r=nmatsakis